--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,5 +70,16 @@ img.thumbail {
   height: 80px;
 }
 
+.small-container {
+  max-width: 600px;
+}
 
-
+.checkout-steps > div {
+border-bottom: 0.2rem solid #a0a0a0;
+color: #a0a0a0;
+}
+ 
+.checkout-steps > div.active {
+border-bottom: 0.2rem solid #0070f0;
+color: #0070f0;
+}
